made a basic footer and fixed the blank white space at the bottom of the page when the main content is too short

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,12 @@
 @import "components/index";
 @import "pages/index";
 
-body {
-  padding-top:106px;
+#page-container {
+  position: relative;
+  min-height: 100vh;
+}
+
+#content-wrap {
+  padding-top: 90px;
+  padding-bottom: 150px;
 }
