--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -6,6 +6,10 @@
     border-color: black;
   }
 
+  #bottom-divider {
+    margin-bottom: 0;
+  }
+
   .navbar-lewagon {
     padding: 0;
     justify-content: space-between;
